# agentic-image-sourcing

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: PAI.md  pai-http-tools.example.json
scripts/: start-pai-http.ps1  start-pai-mcp.ps1
src/agentic_image_sourcing/: __init__.py  api.py  browser_capture.py  config.py  fetching.py  google_gallery.py  main.py  mcp_server.py  models.py  pinchtab_client.py  policies.py  repository.py  service.py  storage.py  utils.py
src/agentic_image_sourcing/adapters/: __init__.py  crawl.py  extract.py  google.py  google_browser.py
tests/: conftest.py  test_api.py  test_extract.py  test_google_browser_adapter.py  test_google_gallery.py  test_pinchtab_client.py  test_service.py
